[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/Main.gd" type="Script" id=1]
[ext_resource path="res://scene/ErrorPanel.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CompileTime" type="Node" parent="."]
pause_mode = 1

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L1" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputPart" type="MarginContainer" parent="UI/HBoxContainer/L1"]
margin_right = 680.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="UI/HBoxContainer/L1/InputPart"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 288.0

[node name="bar" type="HBoxContainer" parent="UI/HBoxContainer/L1/InputPart/VBox"]
margin_right = 660.0
margin_bottom = 20.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="update" type="HBoxContainer" parent="UI/HBoxContainer/L1/InputPart/VBox/bar"]
margin_right = 217.0
margin_bottom = 20.0
size_flags_horizontal = 7

[node name="Progress" type="ProgressBar" parent="UI/HBoxContainer/L1/InputPart/VBox/bar/update"]
margin_top = 3.0
margin_right = 164.0
margin_bottom = 17.0
rect_min_size = Vector2( 164, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
percent_visible = false

[node name="Label" type="Label" parent="UI/HBoxContainer/L1/InputPart/VBox/bar/update"]
margin_left = 168.0
margin_top = 3.0
margin_right = 190.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="CompileTime" type="Label" parent="UI/HBoxContainer/L1/InputPart/VBox/bar/update"]
margin_left = 194.0
margin_top = 3.0
margin_right = 217.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="SimpleText" type="Button" parent="UI/HBoxContainer/L1/InputPart/VBox/bar"]
margin_left = 221.0
margin_right = 438.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "simple text"

[node name="update3" type="HBoxContainer" parent="UI/HBoxContainer/L1/InputPart/VBox/bar"]
margin_left = 442.0
margin_right = 660.0
margin_bottom = 20.0
size_flags_horizontal = 7

[node name="Compile" type="Button" parent="UI/HBoxContainer/L1/InputPart/VBox/bar/update3"]
margin_right = 218.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "compile"

[node name="input" type="TextEdit" parent="UI/HBoxContainer/L1/InputPart/VBox"]
margin_top = 24.0
margin_right = 660.0
margin_bottom = 278.0
size_flags_vertical = 3

[node name="OutputPart" type="MarginContainer" parent="UI/HBoxContainer/L1"]
margin_top = 302.0
margin_right = 680.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="output" type="TextEdit" parent="UI/HBoxContainer/L1/OutputPart"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 288.0

[node name="ErrorPanel" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Label" type="Label" parent="UI/HBoxContainer/ErrorPanel"]
margin_right = 340.0
margin_bottom = 14.0
text = "Error"

[node name="TextEdit" type="TextEdit" parent="UI/HBoxContainer/ErrorPanel"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 600.0
size_flags_vertical = 3
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/HBoxContainer/L1/InputPart/VBox/bar/SimpleText" to="." method="_on_SimpleText_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/L1/InputPart/VBox/bar/update3/Compile" to="." method="compile"]
[connection signal="text_changed" from="UI/HBoxContainer/L1/InputPart/VBox/input" to="." method="_on_input_text_changed"]
